--- a/src/jbake/content/2017/aboutVideo.adoc
+++ b/src/jbake/content/2017/aboutVideo.adoc
@@ -9,3 +9,5 @@
 Видео про книги.
 16 июля на HBO стартовал седьмой сезон «Игры престолов», и кажется, ключевую роль в нем сыграет Бран Старк — мальчик, который выжил, научился вселяться в животных и путешествовать во времени.
 «Медуза» публикует интервью Айзека Хэмпстед-Райта, исполнившего роль Брана Старка; а также комментарий кинокритика Егора Москвитина, который рассказывает, чего стоит ждать от этого персонажа в новом сезоне.
+
+Мы будем следить.
