--- a/src/jbake/content/2017/070.adoc
+++ b/src/jbake/content/2017/070.adoc
@@ -19,7 +19,7 @@ http://bit.ly/TastyBooks70[Скотт Рао — Пособие професси
 Fedor Rusak, Storozhuk Bogdan, Sergey Petrov, Sergey Kiselev, Sergey Vinyarsky, Yakov, Pavel Sitnikov, nikaburu, Dmitry Dolzhenko, Pavel Drobushevich, Grigori Pivovar, Vasiliy Galkin, Евгений Власов, Konstantin Kovrizhnykh, Lagunovsky Ivan, Sergii Zhuk, Aleksandr Kiriushin, Nikolay Ushmodin, B7W, Leo Kapanen, Oleksii Nesterenko
 
 ++++
-
+<iframe src='https://www.podbean.com/media/player/5wp7e-6f0dc1?from=yiiadmin' data-link='https://www.podbean.com/media/player/5wp7e-6f0dc1?from=yiiadmin' height='100' width='100%' frameborder='0' scrolling='no' data-name='pb-iframe-player' ></iframe>
 ++++
 
 http://bit.ly/TAOPpatron[Поддержи подкаст] +
