update old records

--- a/podcast shell/themes/третий сезон/Вкусные книги 078 — Путь художника [ профи ].md
+++ b/podcast shell/themes/третий сезон/Вкусные книги 078 — Путь художника [ профи ].md
@@ -10,7 +10,7 @@ Fedor Rusak, Storozhuk Bogdan, Sergey Petrov, Sergey Kiselev, Sergey Vinyarsky, 
 Скачай подкаст http://bit.ly/TastyBooks78mp3
     
 твит:
-Творчесий отпуск и путь художника #вкусныекниги — http://bit.ly/TastyBooks78shared
+Творческий отпуск и путь художника #вкусныекниги — http://bit.ly/TastyBooks78shared
     
 
 	
